<resources>
    <string name="app_name">CMP2004_2</string>
    <string name="top_register">register</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click to Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="write_here">Write Here</string>
    <string name="welcome_to_appname">Welcome to AppName\nTry it now!</string>
    <string name="default_web_client_id" translatable="false">719331565905-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com</string>
    <string name="back">Back</string>
    <string name="how_can_i_help_you_today">How can I help you today?</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="social_login">Social Login</string>
    <string name="settings">Settings</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="language_turkish_english">Language (English/Turkish)</string>
    <string name="delete_all_chats">Delete All Chats</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="logout">Logout</string>
</resources>